--- a/src/index.css
+++ b/src/index.css
@@ -1761,6 +1761,53 @@ html:lang(en) .p-result__type {
     var(--shadow-thickness) var(---shadow-thickness) 2px var(--shadow-color);
   text-shadow: var(--text-shadow);
 }
+
+.p-card__upgrade-switcher {
+  --size: 24px;
+  margin-top: 0.5em;
+  font-size: var(--size);
+}
+.c-upgrade-switcher {
+  display: flex;
+  align-items: center;
+  column-gap: 0.5em;
+  padding: 0.2em 1em;
+  cursor: pointer;
+  background: var(--light-blue);
+}
+.c-upgrade-switcher__toggle {
+  appearance: none;
+  width: calc(var(--size) * 2 - 2px);
+  height: var(--size);
+  position: relative;
+  border: none;
+  border-radius: calc(var(--size) / 2);
+  background-color: #BCBDBD;
+  cursor: inherit;
+}
+.c-upgrade-switcher__toggle:after {
+  content: '';
+  position: absolute;
+  width: calc(var(--size) - 4px);
+  height: calc(var(--size) - 4px);
+  border-radius: 100%;
+  left: 1px;
+  top: 1px;
+  background: #FFFFFF;
+  border: 1px solid #BCBDBD;
+}
+.c-upgrade-switcher__toggle:checked {
+  background-color: var(--koishi);
+}
+.c-upgrade-switcher__toggle:checked:after {
+  border-color: var(--koishi);
+  transform: translateX(100%);
+}
+.c-upgrade-switcher__text {
+  cursor: inherit;
+  user-select: none;
+}
+
 .c-card__center {
   left: 50%;
   transform: translateX(-50%);
@@ -1942,6 +1989,9 @@ html:lang(en) .p-result__type {
 
   .p-modal__inner--card {
     transform: scale(0.5);
+  }
+  .p-card__upgrade-switcher {
+    --size: 36px;
   }
 
   .u-pc {
