--- a/src/index.css
+++ b/src/index.css
@@ -1777,6 +1777,17 @@ html:lang(en) .p-result__type {
   display: inline-block;
   line-height: var(--size);
 }
+.p-card__cost {
+  top: 16px;
+  right: 30px;
+}
+.p-card__cost .p-card-mana {
+  justify-content: flex-end;
+}
+.p-card__cost .c-card-mana {
+  flex-basis: 54px;
+  margin-left: -8px;
+}
 
 .p-card__upgrade-switcher {
   --size: 24px;
