use darker color for highlight and value of non-cards

--- a/src/index.css
+++ b/src/index.css
@@ -1629,6 +1629,9 @@ html:lang(en) .p-result__type {
 }
 
 .c-highlight--orange {
+  color: var(--orange);
+}
+.p-card__description .c-highlight--orange {
   color: var(--f-highlight);
 }
 .c-highlight--updatad-green {
@@ -1695,7 +1698,7 @@ html:lang(en) .p-result__type {
   width: 100%;
   overflow-y: auto;
   scrollbar-width: none;
-  background: var(--white);
+  background: var(--light-gray);
   max-height: 70vh;
 }
 .p-modal__exhibit .c-exhibit--with-counter,
@@ -1709,7 +1712,6 @@ html:lang(en) .p-result__type {
   align-items: center;
   position: sticky;
   top: 0;
-  background: var(--white);
   padding: var(--padding);
 }
 .p-modal__name {
@@ -1719,7 +1721,11 @@ html:lang(en) .p-result__type {
 .p-modal__body {
   padding: var(--padding);
 }
-.p-modal__variable {
+.p-modal__inner--exhibit .p-modal__variable,
+.p-modal__inner--status-effect .p-modal__variable {
+  color: var(--cirno);
+}
+.p-modal__inner--card .p-modal__variable {
   color: var(--f-value);
 }
 
