--- a/src/index.css
+++ b/src/index.css
@@ -1791,8 +1791,11 @@ html:lang(en) .p-result__type {
 .c-card-type__text,
 .p-card__descriptions {
   display: inline-block;
-  line-height: 1.3em;
   vertical-align: baseline;
+}
+.p-card-name__text,
+.c-card-type__text {
+  line-height: 1em;
 }
 .p-card__type-text {
   --size: 32px;
@@ -1844,6 +1847,7 @@ html:lang(en) .p-result__type {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+  line-height: 1.5em;
 }
 .p-card__description:not(:last-child) {
   margin-bottom: 28px;
