--- a/src/index.css
+++ b/src/index.css
@@ -1740,7 +1740,7 @@ html:lang(en) .p-result__type {
 .p-modal__body {
   padding: var(--padding);
 }
-.p-modal__inner--card .p-modal__variable {
+.p-modal__variable {
   color: var(--f-value);
 }
 
