adjust `p-result__type`

--- a/src/index.css
+++ b/src/index.css
@@ -1204,8 +1204,11 @@ html:lang(en) .c-entity__text {
   right: 23%;
 }
 .p-result__type {
-  left: var(--left);
   top: 15%;
+  /* left: auto; */
+  right: 10%;
+  text-align: left;
+  min-width: 50%;
 }
 html:lang(en) .p-result__type {
   font-size: 0.9em;
