--- a/src/index.css
+++ b/src/index.css
@@ -250,11 +250,13 @@ input {
 .p-run-list__table {
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
 }
 .p-run-list__header, .p-run-list__body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  overflow-x: hidden;
 }
 .p-run-list__item, .p-run-list__item--header {
   display: flex;
